@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-26T00:39:03Z",
+  "timestamp" : "2022-08-29T16:08:32Z",
   "count_outdated" : 46,
   "uniques_outdated" : 16,
-  "count" : 53,
-  "uniques" : 20,
+  "count" : 54,
+  "uniques" : 21,
   "views" : [
     {
       "timestamp": "2022-08-16T00:00:00Z",
@@ -21,6 +21,13 @@
     },
     {
       "timestamp": "2022-08-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
