@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 4,
+  "count": 8,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2022-08-16T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2022-08-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
