@@ -1,3 +1,11 @@
+2022-08-29T16:08:32Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2950009118
+* notice: last 14d: unq all: 5 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 16 46 / 20 53
+* notice: next accum: outdated-unq outdated-all / unq all: 16 46 / 21 54
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-29]
+
 2022-08-26T00:39:03Z:
 * notice: last 14d: unq all: 4 7
 * notice: prev accum: outdated-unq outdated-all / unq all: 16 46 / 19 52
